Updated layout / fixed spacing / style change

--- a/css/style.css
+++ b/css/style.css
@@ -65,13 +65,20 @@ nav .header_right .nav-heading {
   padding: 3% 0%;
 }
 
-nav .header_right .algos {
+/* nav .header_right .algos {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (16.66667%)[6];
       grid-template-columns: repeat(6, 16.66667%);
   place-content: center;
   padding: 2% 0%;
+} */
+ nav .header_right .algos {
+  display: grid;
+  grid-template-columns: repeat(6, auto);
+  place-content: center;
+  padding: 2% 0%;
+  gap: 12px;
 }
 
 nav .header_right .algos button {
@@ -81,6 +88,9 @@ nav .header_right .algos button {
   outline: none;
   padding: 5% 0%;
   font-size: x-large;
+
+    margin: 0 8px;
+  
 }
 
 nav .header_right .algos button:hover {
